--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -42,14 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not factors!\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 15\n",
+    "num2 = 7\n",
+    "if num1%num2 == 0 or num2%num1 == 0:\n",
+    "    print('factors!')\n",
+    "else:\n",
+    "    print('not factors!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,14 +85,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "school is postponed\n"
+     ]
+    }
+   ],
+   "source": [
+    "Georgia = 1\n",
+    "New_Jersey = 2\n",
+    "north_carolina = 3\n",
+    "\n",
+    "state = int(input())\n",
+    "if state == New_Jersey:\n",
+    "    print(\"school isn't cancelled\")\n",
+    "elif state == north_carolina:\n",
+    "    print(\"school is postponed\")\n",
+    "elif state == Georgia:\n",
+    "    print(\"school is cancelled\")\n",
+    "else :\n",
+    "    print(\"school's status is unknown\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,14 +145,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rat\n"
+     ]
+    }
+   ],
+   "source": [
+    "signe = int(input())\n",
+    "if signe%12 == 0:\n",
+    "    print(\"monkey\")\n",
+    "elif signe%12 == 1:\n",
+    "    print(\"rooster\")\n",
+    "elif signe%12 == 2:\n",
+    "    print(\"dog\")\n",
+    "elif signe%12 == 3:\n",
+    "    print(\"pig\")\n",
+    "elif signe%12 == 4:\n",
+    "    print(\"rat\")\n",
+    "elif signe%12 == 5:\n",
+    "    print(\"ox\")\n",
+    "elif signe%12 == 6:\n",
+    "    print(\"tiger\")\n",
+    "elif signe%12 == 7:\n",
+    "    print(\"rabbit\")\n",
+    "elif signe%12 == 8:\n",
+    "    print(\"dragon\")\n",
+    "elif signe%12 == 9:\n",
+    "    print(\"snake\")\n",
+    "elif signe%12 == 10:\n",
+    "    print(\"horse\")\n",
+    "elif signe%12 == 11:\n",
+    "    print(\"sheep\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,13 +203,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '3.2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/exercises/TD02_structures_controle/02_structures_controle.ipynb Cellule 9\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD02_structures_controle/02_structures_controle.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m Temperature \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD02_structures_controle/02_structures_controle.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m celcius \u001b[39m=\u001b[39m Temperature\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD02_structures_controle/02_structures_controle.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m fahrenheit \u001b[39m=\u001b[39m (\u001b[39mint\u001b[39;49m(Temperature) \u001b[39m-\u001b[39m \u001b[39m32\u001b[39m)\u001b[39m*\u001b[39m(\u001b[39m5\u001b[39m\u001b[39m/\u001b[39m\u001b[39m9\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD02_structures_controle/02_structures_controle.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mif\u001b[39;00m Temperature \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD02_structures_controle/02_structures_controle.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mif\u001b[39;00m celcius \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '3.2'"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -157,16 +240,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "non-bissextile\n"
+     ]
+    }
+   ],
+   "source": [
+    "annee = int(input())\n",
+    "if annee%4 == 0:\n",
+    "    print(\"bissextile\")\n",
+    "else:\n",
+    "    print(\"non-bissextile\")"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
     "\n",
@@ -176,68 +275,148 @@
     "\n",
     "1. Ecrire un programme qui permet d'afficher tous les nombres entre 1 et 10 (bornes incluses).\n",
     "2. Ecrire un programme se limitant à la boucle *for* qui permet d'afficher tous les nombres pairs entre 1 et 20 (bornes incluses). Proposer une deuxième solution en incluant une structure conditionnelle."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "o =[]\n",
+    "while i != 20:\n",
+    "    i += 1\n",
+    "    o.append(i)\n",
+    "print(o)"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 7:**\n",
     "    \n",
     "1. Ecrire un programme qui demande à l'utilisateur de saisir *n* nombres, *n* étant choisi par l'utilisateur, puis d'afficher la moyenne de ces nombres.\n",
     "\n",
     "2. Même question, mais l'utilisateur ne choisit pas à l'avance le nombre *n*, la procédure s'arrête quand il saisit le nombre -1.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
-    "**Exercice 8:**\n",
+    "n = int(input())\n",
+    "nnn = 0\n",
+    "cpt = 0\n",
+    "moy = 0\n",
+    "for i in range(n):\n",
+    "    nn = int(input())\n",
+    "    cpt += 1\n",
+    "    nnn += nn\n",
+    "moy = nnn/cpt\n",
+    "print(moy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn = 0\n",
+    "cpt = 0\n",
+    "nnn = 0\n",
+    "while nn !=-1:\n",
+    "    nn = int(input())\n",
+    "    cpt += 1\n",
+    "    nnn += nn\n",
+    "moy = (nnn -nn)/(cpt-1)\n",
+    "print(moy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'\n",
+    "'**Exercice 8:**\n",
     "\n",
     "Ecrire un programme qui permet de calculer le factoriel d'un nombre positif donné par l'utlisateur selon la formule suivante : \n",
     "n! = 1 x 2 x ... x n.  \n",
     "\n",
     "1. Une première version en utilisant la boucle *for*\n",
     "2. Une seconde version en utilisant la boucle *while*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "source": [
+    "facto = int(input())\n",
+    "n = 1\n",
+    "for i in range(2 ,facto + 1):\n",
+    "    n = n * i\n",
+    "print(n)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact = 1\n",
+    "num = int(input())\n",
+    "while (num > 1):\n",
+    "    fact *= num\n",
+    "    num -= 1\n",
+    "print(fact)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,14 +448,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#ton jour de naissance est il dans la liste 1\n",
+    "q1 = int(input('q1'))\n",
+    "if q1 == 1 :\n",
+    "    day += 1\n",
+    "#ton jour de naissance est il dans la liste 2\n",
+    "q2 = int(input('q2'))\n",
+    "if q2 == 1 :\n",
+    "    day += 2\n",
+    "#ton jour de naissance est il dans la liste 3\n",
+    "q3 = int(input('q3'))\n",
+    "if q3 == 1 :\n",
+    "    day += 4\n",
+    "#ton jour de naissance est il dans la liste 4\n",
+    "q4 = int(input('q4'))\n",
+    "if q4 == 1 : \n",
+    "    day += 8\n",
+    "#ton jour de naissance est il dans la liste 5\n",
+    "q5 = int(input('q5'))\n",
+    "if q5 == 1 :\n",
+    "    day += 16\n",
+    "print(day)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,69 +512,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tu as gagner 1K\n",
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rd\n",
+    "nombre = rd.randint(10,100)\n",
+    "guess = int(input())\n",
+    "liste = []\n",
+    "listeguess = []\n",
+    "listeguess.append(guess // 10)\n",
+    "listeguess.append(guess % 10)\n",
+    "liste.append(nombre // 10)\n",
+    "liste.append(nombre % 10)\n",
+    "if nombre == guess:\n",
+    "    print(\"bravo tu as gagner 10k\")\n",
+    "elif listeguess[0] == liste[1] and listeguess[1] == liste[0]:\n",
+    "    print(\"tu as gagner 3k\")\n",
+    "elif listeguess[0] == liste[0] or listeguess[0] == liste[1]:\n",
+    "    print(\"tu as gagner 1k\")\n",
+    "elif listeguess[1] == liste[0] or listeguess[1] == liste[1]:\n",
+    "    print(\"tu as gagner 1K\")\n",
+    "else : \n",
+    "    print(\"tu n'as rien gagner\")\n",
+    "print(nombre)"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 11:**\n",
     "    \n",
     "Ecrire un programme qui permet de calculer la somme des chiffres d'un entier *n* donné. Le nombre *n* doit être compris entre 10 et 20 (bornes incluses)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "n1 = []\n",
+    "n2 = 0\n",
+    "while n < 10 or n > 20:\n",
+    "    n = int(input())\n",
+    "n1.append(n // 10)\n",
+    "n1.append(n % 10)\n",
+    "n2 = n1[0] + n1[1]\n",
+    "print(n2)\n",
+    "\n"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 12:**\n",
     "\n",
     "1. Ecrire un programme qui permet de générer aléatoirement deux nombres entre 0 et 9, de calculer leurs différences (en valeur absolue), puis d'inviter l'utilisateur à répondre à la question suivante *que vaut abs(number1 - number2)?*. Le programme doit permettre à l'utilisateur de répondre plusieurs fois jusqu'à la saisie de la bonne réponse.\n",
     "2. Modifier le programme précédent de telle sorte qu'il génère cinq occurences à la suite invitant à répondre à la question précédente. A la fin, le programme affiche le nombre moyen de tentatives qu'il a fallu à l'utilisateur pour répondre à une question."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
    "source": [
+    "import random as rd\n",
+    "chiffre1 = rd.randint(0, 9)\n",
+    "chiffre2 = rd.randint(0, 9)\n",
+    "answer = int(input(str(chiffre1) + \"-\" + str(chiffre2)))\n",
+    "while answer != abs(chiffre1 - chiffre2) : \n",
+    "    answer = int(input(str(chiffre1) + \"-\" + str(chiffre2)))\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rd\n",
+    "cpt = 0\n",
+    "for i in range(0, 5):\n",
+    "    chiffre1 = rd.randint(0, 9)\n",
+    "    chiffre2 = rd.randint(0, 9)\n",
+    "    answer = int(input(str(chiffre1) + \"-\" + str(chiffre2)))\n",
+    "    if answer != abs(chiffre1 - chiffre2) :\n",
+    "         answer = int(input(str(chiffre1) + \"-\" + str(chiffre2)))\n",
+    "         cpt += 1\n",
+    "    else:\n",
+    "        cpt += 1\n",
+    "        print(answer)\n",
+    "cpt / 5\n",
+    "print\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 13:**\n",
     "\n",
     "Ecrire un programme qui permet de calculer le nombre de mots dans une phrase saisie par l'utilisateur."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -434,25 +738,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 0 \n",
+    "for i in range(2,10,2):\n",
+    "    j = 3 \n",
+    "    if i % 2 == 0:\n",
+    "        t += 1\n",
+    "        j += 1\n",
+    "    else:\n",
+    "        k += 2\n",
+    "print(t ,j)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 6, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [5,3,4,7]\n",
+    "y = []\n",
+    "for e in x :\n",
+    "    y.append(e + x.index(e))\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,6 +824,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 17:**\n",
     "\n",
@@ -500,9 +838,7 @@
     "*****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -514,6 +850,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 18:**\n",
     "\n",
@@ -526,9 +864,7 @@
     " *****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -540,13 +876,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 19:**\n",
     "\n",
     "Ecrire un programme qui calcule, étant donné un entier *n* rentré par l'utilisateur, la plus grande puissance de *n* inférieure à un million."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -561,7 +897,7 @@
  "metadata": {
   "celltoolbar": "Diaporama",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('l1-python')",
    "language": "python",
    "name": "python3"
   },
@@ -575,7 +911,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f43bac6c2f29bd1eacf8ddf48fdcdf74384b88eb577abaaa0ada2bd78f7bc064"
+   }
   }
  },
  "nbformat": 4,
