--- a/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
+++ b/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
@@ -1379,7 +1379,7 @@
  "metadata": {
   "celltoolbar": "Diaporama",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('l1-python')",
    "language": "python",
    "name": "python3"
   },
@@ -1393,7 +1393,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f43bac6c2f29bd1eacf8ddf48fdcdf74384b88eb577abaaa0ada2bd78f7bc064"
+   }
   }
  },
  "nbformat": 4,
