--- a/cours/05_outils/05_outils.ipynb
+++ b/cours/05_outils/05_outils.ipynb
@@ -253,9 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mon_print' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb Cellule 15\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmonPrint\u001b[39m(a : \u001b[39mint\u001b[39m, b: \u001b[39mint\u001b[39m):  \u001b[39m#les informations de type ne changent rien à l'exécution\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(a \u001b[39m+\u001b[39m b)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m mon_print(\u001b[39m5\u001b[39m,\u001b[39m7\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m mon_print(\u001b[39m\"\u001b[39m\u001b[39msalut\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mhello\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m mon_print(\u001b[39m5\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39msalut\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mon_print' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def monPrint(a : int, b: int):  #les informations de type ne changent rien à l'exécution\n",
     "    print(a + b)\n",
@@ -293,13 +305,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb Cellule 18\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m maximum  \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X23sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mmax\u001b[39m([\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m9\u001b[39m]))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X23sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mmax\u001b[39;49m([])\n",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb Cellule 18\u001b[0m in \u001b[0;36mmax\u001b[0;34m(liste)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmax\u001b[39m(liste):  \u001b[39m#calcul d'un max, on suppose que la liste est non vide\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mlen\u001b[39m(liste) \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     maximum \u001b[39m=\u001b[39m liste[\u001b[39m0\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mfor\u001b[39;00m elem \u001b[39min\u001b[39;00m liste:\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def max(liste):  #calcul d'un max, on suppose que la liste est non vide\n",
     "    assert len(liste) != 0\n",
@@ -315,13 +347,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Un élément négatif",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb Cellule 19\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m maximum  \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mmax\u001b[39m([\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m9\u001b[39m]))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mmax\u001b[39;49m([\u001b[39m1\u001b[39;49m, \u001b[39m3\u001b[39;49m, \u001b[39m4\u001b[39;49m, \u001b[39m-\u001b[39;49m\u001b[39m2\u001b[39;49m, \u001b[39m3\u001b[39;49m])\n",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb Cellule 19\u001b[0m in \u001b[0;36mmax\u001b[0;34m(liste)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m maximum \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m elem \u001b[39min\u001b[39;00m liste:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39massert\u001b[39;00m elem \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mUn élément négatif\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m# assert avec un message d'erreur\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mif\u001b[39;00m maximum \u001b[39m<\u001b[39m elem:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/05_outils/05_outils.ipynb#X24sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         maximum \u001b[39m=\u001b[39m elem\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Un élément négatif"
+     ]
+    }
+   ],
    "source": [
     "def max(liste):  # calcul d'un max, on suppose que la liste est non vide et les valeurs sont positives\n",
     "    maximum = 0\n",
@@ -337,9 +389,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function maxModulaire in module __main__:\n",
+      "\n",
+      "maxModulaire(liste, inferieur)\n",
+      "    Fonction calculant le maximum de liste qui doit être non vide, en utilisant la fonction de comparaison inferieur.\n",
+      "    Si le maximum est répété, renvoie le premier qui a été détecté\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#exemple de code satisfaisant et commenté\n",
     "\n",
@@ -415,7 +480,7 @@
  "metadata": {
   "celltoolbar": "Diaporama",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('l1-python')",
    "language": "python",
    "name": "python3"
   },
@@ -429,7 +494,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f43bac6c2f29bd1eacf8ddf48fdcdf74384b88eb577abaaa0ada2bd78f7bc064"
+   }
   }
  },
  "nbformat": 4,
