--- a/cours/06_listes/06_listes.ipynb
+++ b/cours/06_listes/06_listes.ipynb
@@ -41,17 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Liste d'entiers\n",
-    "entiers = [5, 0, 17, 42, 23]\n",
-    "entiers"
+    "a = 5 * 0.3\n",
+    "print(a)\n"
    ]
   },
   {
@@ -622,13 +629,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paris', 'Berlin', 'Madrid', 'Athènes', 'Dublin', 'Budapest', 'Vienne']\n"
+     ]
+    }
+   ],
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\", \"Amsterdam\"]\n",
     "capitales[4:7] = [\"Dublin\", \"Budapest\", \"Vienne\"]\n",
@@ -736,13 +751,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paris', 'Lisbonne', 'Berlin', 'Madrid', 'Athènes', 'Zagreb', 'Rome']\n"
+     ]
+    }
+   ],
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\"]\n",
     "capitales.insert(1,\"Lisbonne\")\n",
@@ -873,13 +896,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 10, 4, 7, 3, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "nombres = [5, 3, 7, 4, 10, 9, 1]\n",
     "nombres.reverse()\n",
@@ -1147,13 +1178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rac\n"
+     ]
+    }
+   ],
    "source": [
     "chaine = 'abracadabra'\n",
     "print(chaine[2:5])"
@@ -1490,13 +1529,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "nombres = [1, 3, 5, 7, 9, 11]\n",
     "print(3 in nombres)\n",
@@ -2037,13 +2086,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'V', 'a', 'e', 'i', 'l', 'r', 's'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# À partir d'une chaîne de caractères\n",
     "s = set(\"Versailles\")\n",
@@ -2089,13 +2149,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/cours/06_listes/06_listes.ipynb Cellule 144\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/cours/06_listes/06_listes.ipynb#Y263sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m s[\u001b[39m2\u001b[39;49m]\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "s[2]"
    ]
@@ -2440,7 +2512,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('l1-python')",
    "language": "python",
    "name": "python3"
   },
@@ -2454,7 +2526,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f43bac6c2f29bd1eacf8ddf48fdcdf74384b88eb577abaaa0ada2bd78f7bc064"
+   }
   }
  },
  "nbformat": 4,
