--- a/exercises/TD03_fonctions/03_fonctions.ipynb
+++ b/exercises/TD03_fonctions/03_fonctions.ipynb
@@ -187,11 +187,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#tester ici les fonctions de la librairie time"
+    "970000000000097 % 1000000000000"
    ]
   },
   {
@@ -312,6 +323,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bonjour mariam\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ['henri', 'fatima', 'wu']\n",
+    "y = 'bonjour'\n",
+    "z, t = x, y\n",
+    "x[1] = 'xavier'\n",
+    "z[0] = 'mariam'\n",
+    "y = 'bienvenue'\n",
+    "print(t, x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = 0\n",
+    "for j in range(10,1, -2):\n",
+    "    if j < 6:\n",
+    "        tmp -= j\n",
+    "    else:\n",
+    "        tmp += j\n",
+    "print(tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'y' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb Cellule 27\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     x , y \u001b[39m=\u001b[39m x \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, y \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m x, y \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m f(x)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(x, y)\n",
+      "\u001b[1;32m/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb Cellule 27\u001b[0m in \u001b[0;36mf\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mf\u001b[39m(x):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/joseph/UVSQ_info_2022/l1-python/exercises/TD03_fonctions/03_fonctions.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     x , y \u001b[39m=\u001b[39m x \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, y \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'y' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    x , y = x + 1, y + 1\n",
+    "x, y = 1, 2\n",
+    "f(x)\n",
+    "print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -320,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('l1-python')",
    "language": "python",
    "name": "python3"
   },
@@ -334,7 +417,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f43bac6c2f29bd1eacf8ddf48fdcdf74384b88eb577abaaa0ada2bd78f7bc064"
+   }
   }
  },
  "nbformat": 4,
