--- a/exercises/TD04_listes/04_listes.ipynb
+++ b/exercises/TD04_listes/04_listes.ipynb
@@ -22,10 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [3, 5, 10]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,10 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 10, 12, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.append(12)\n",
+    "a.append(17)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,10 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a[2] = -7"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 10, -14, 24, 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    a[i] *= 2\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 11, -12, 27, 38]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    a[i] += i\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,10 +132,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 18, 23, 24, 70, 79, 81, 88, 97, 99]\n",
+      "594\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "B = []\n",
+    "total = 0\n",
+    "plusgrand = 0\n",
+    "for i in range(10):\n",
+    "    B.append(random.randint(10, 99))\n",
+    "    total += B[i]\n",
+    "B = sorted(B)\n",
+    "plusgrand = B[-1]\n",
+    "print(B)\n",
+    "print(total)\n",
+    "print(plusgrand)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +170,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 87, 30, 56, 56, 85, 15, 90, 30, 39]\n",
+      "[30, 56, 56, 90, 30]\n",
+      "[33, 87, 85, 15, 39]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "alea = []\n",
+    "alea2 = []\n",
+    "alea3 = []\n",
+    "for i in range(10):\n",
+    "    alea.append(random.randint(10,99))\n",
+    "    if alea[i] % 2 == 0:\n",
+    "        alea2.append(alea[i])\n",
+    "    else :\n",
+    "        alea3.append(alea[i])\n",
+    "print(alea)\n",
+    "print(alea2)\n",
+    "print(alea3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 30, 30, 33, 39, 56, 56, 85, 87, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alea = sorted(alea)\n",
+    "print(alea)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,10 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30, 30, 33, 39, 56, 56, 85, 87]\n"
+     ]
+    }
+   ],
+   "source": [
+    "del alea[0]\n",
+    "del alea[-1]\n",
+    "print(alea)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,10 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "paquet = []\n",
+    "for i in range(52):\n",
+    "    paquet.append(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +277,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 0, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "paquet = []\n",
+    "for i in range(52):\n",
+    "    paquet.append(i)\n",
+    "coupe1 = []\n",
+    "coupe2 = []\n",
+    "I = random.randint(0, 52)\n",
+    "coupe1 = paquet[0:I]\n",
+    "coupe2 = paquet[I:-1]\n",
+    "paquet = coupe2 + coupe1\n",
+    "print(paquet)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -433,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('l1-python')",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +582,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f43bac6c2f29bd1eacf8ddf48fdcdf74384b88eb577abaaa0ada2bd78f7bc064"
+   }
   }
  },
  "nbformat": 4,
